# recursive-codex

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/config_ui/: Dockerfile  app.py  config.py  dependencies.py  models.py
apps/config_ui/static/: config-ui.js  index.html  styles.css
apps/feedback_service/: Dockerfile  __init__.py  app.py  config.py  dependencies.py
apps/host_bridge/: Dockerfile  __init__.py  app.py  config.py  dependencies.py
apps/orchestrator_cli/: __init__.py  __main__.py  cli.py
apps/router_service/: Dockerfile  __init__.py  app.py  config.py  dependencies.py
apps/screenshot_service/: Dockerfile  __init__.py  app.py  config.py  dependencies.py
config/: frontend_config_schema.json  pipeline_overrides.json  ui_feedback_schema.json
docs/: architecture.md  contributing.md  getting-started.md  release.md  troubleshooting.md
docs/config-ui/: README.md  SMOKE_CHECKLIST.md  schema.md  troubleshooting.md
enhancement_pipeline/: codex.py  feedback.py  screenshots.py
examples/demo-landing/: README.md  index.html  serve.sh  styles.css
scripts/: bootstrap.sh  release.sh
scripts/dev/: down.sh  up.sh
scripts/host_bridge/: start.sh  stop.sh
tests/apps/: test_host_bridge.py  test_router.py
tests/apps/config_ui/: test_api.py
tests/config/: test_env_store.py
tests/core/: test_feedback.py  test_screenshots.py
tests/e2e/: test_pipeline.py
tests/enhancement_core/: test_pipeline_iterations.py
