[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive-codex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.43.0",
    "pillow>=10.4.0",
    "playwright>=1.45.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
screenshot-service = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
feedback-service = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
]
router-service = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
]
config-ui = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
host-bridge = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
]
cli = [
    "typer>=0.12.3",
]
dev = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "typer>=0.12.3",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.6.5",
    "mypy>=1.11.2",
    "pip-tools>=7.4.1",
]

[tool.setuptools.packages.find]
where = ["packages"]

[project.scripts]
enhancement_cli = "enhancement_core.cli.app:app"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["enhancement_pipeline"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["B008", "UP045"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = false
disallow_any_unimported = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: marks integration-style tests that exercise orchestrated flows",
]
